// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validateField should return all validation error messages 1`] = `
Object {
  "test": Object {
    "message": "test",
    "ref": Object {
      "name": "test",
      "setCustomValidity": [Function],
      "type": "text",
      "value": "",
    },
    "type": "required",
    "types": Object {
      "minLength": "minLength",
      "pattern": "pattern",
      "required": "test",
      "test": true,
      "test1": "Luo",
      "test2": "Bill",
    },
  },
}
`;

exports[`validateField should return all validation errors 1`] = `
Object {
  "test": Object {
    "message": "",
    "ref": Object {
      "name": "test",
      "setCustomValidity": [Function],
      "type": "text",
      "value": "",
    },
    "type": "required",
    "types": Object {
      "minLength": true,
      "pattern": true,
      "required": true,
      "validate": true,
    },
  },
}
`;
